kubernetes/gcp-examples/09-webserver/03-vs-network-faults.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: webserver
spec:
  hosts:
  - webserver
  http:
  - route:
    - destination:
        host: webserverv1
#The fault property has been configured to abort 50% of requests 
#with a HTTP response code of 400:
    fault:
      abort:
        percentage:
          value: 50
        httpStatus: 400
